<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">199089576961109</string>
    <string name="app_name">Ventoura</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading</string>
    <string name="guideDetail">Guide Detail</string>
    <string name="travellerDetail">Traveller Detail</string>
    <string name="login">Login</string>
    <string name="com.mindelo.ventoura.LoginFragment.loginFacebook">Login Facebook</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="contact_us">Contact Us</string>
    <string name="switch_account">Switch Account</string>
    <string name="guide">Guide</string>
    <string name="traveller">Traveller</string>
    <string name="updateVSettings">Update V Settings</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="edit_profile_hint">Input your bio</string>
    <string name="filter_matches">FILTER MATCHES</string>
    <string name="travellers">TRAVELLERS</string>
    <string name="guides">GUIDES</string>

    <!-- Used By IM -->
    <string name="user_im_token">199089576961109</string>

    <!-- Used By Activity Name -->
    <string name="activity_main">Ventoura</string>
    <string name="activity_loading">Ventoura</string>
    <string name="activity_GuideConversationActivity">Guide Conversation</string>
    <string name="activity_TravellerConversationActivity">Traveller Conversation</string>
    <string name="activity_GuidePortalActivity">Guide Portal</string>
    <string name="activity_TravellerFriendDetailActivity">Traveller Friend Detail</string>
    <string name="activity_GuideFriendDetailActivity">Guide Friend Detail</string>
    <string name="activity_TravellerPortalActivity">Traveller Portal</string>
    <string name="GuideProfileInitializeActivity">Guide Setup</string>
    <string name="TravellerProfileInitializeActivity">Traveller Setup</string>
    <string name="TravellerGalleryActivity">Traveller Gallery</string>
    <string name="GuideGalleryActivity">Guide Gallery</string>
    <string name="TravellerConversationActivity">Traveller ConversationActivity</string>
    <string name="GuideConversationActivity">Guide ConversationActivity</string>

    <!-- Used By Fragment Name -->
    <string name="fragment_guideTourSetup">Your Tour</string>
    <string name="fragment_guideProfile">Guide Profile</string>
    <string name="fragment_guideVentouring">Ventouring</string>
    <string name="fragment_guideMessage">Messages</string>
    <string name="fragment_guideSettings">Settings</string>
    <string name="fragment_guideBookings">Bookings</string>
    <string name="fragment_travellerProfile">Traveller Profile</string>
    <string name="fragment_travellerVentouring">Ventouring</string>
    <string name="fragment_travellerMessage">Messages</string>
    <string name="fragment_travellerMyTrip">My Trip</string>
    <string name="fragment_travellerSettings">Settings</string>

    <!-- Used By Button Text -->
    <string name="button_RoleChoosingActivity_guide">GUIDE</string>
    <string name="button_RoleChoosingActivity_traveller">TRAVELLER</string>
    <string name="nationality">NATIONALITY</string>
    <string name="languages">LANGUAGES KNOWN</string>
    <string name="bio">BIO</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">OK</string>
    <string name="next">NEXT</string>

    <!-- Used By Guide Profile Hints -->
    <string name="guide_profile_description_title">About:</string>
    <string name="guide_profile_city_title">City: </string>
    <string name="guide_profile_tour_price_title">Tour Price:  </string>
    <string name="guide_profile_tour_length_title">Tour Length:  </string>
    <string name="guide_profile_attractions_title">Attractions &amp; Local Secrets: </string>

    <!-- Used By Guide Profile Edit -->
    <string name="guide_profile_edit_description_title">About:</string>
    <string name="guide_profile_edit_city_title">City: </string>
    <string name="guide_profile_edit_tour_price_title">Tour Price:  </string>
    <string name="guide_profile_edit_tour_length_title">Tour Length:  </string>
    <string name="guide_profile_edit_attractions_title">Attractions &amp; Local Secrets: </string>
    <string name="guide_profile_edit_description_hint">Tell us something about yourself and your tour...</string>
    <string name="guide_profile_edit_tour_type_hint">Set Your Tour Type</string>
    <string name="guide_profile_edit_city_hint">Choose Location</string>
    <string name="guide_profile_edit_tour_price_hint">$$$</string>
    <string name="guide_profile_edit_tour_length_hint">How Long</string>
    <string name="guide_profile_edit_attractions_hint">Small secerets that may appeal more travllers</string>

    <!-- Used by traveller Profile Edit -->
    <string name="traveller_profile_edit_country_title">Country: </string>
    <string name="traveller_profile_edit_country_hint">Choose Location</string>
    <string name="traveller_profile_edit_description_hint">Tell us something about yourself.</string>
    <string name="traveller_profile_edit_description_title">About</string>
    <string name="guide_profile_des_type_select_label">Select your tour type</string>
    <string name="guide_profile_des_city_select_prompt">Select your tour city</string>
    <string name="guide_profile_des_gender_select_prompt">Select your gender</string>
    <string name="guide_profile_des_coutry_select_prompt">Select your tour country</string>

    <!-- Used By Label Text -->
    <string name="label_welcome_facebook_tips1">CONNECT THROUGH FACEBOOK</string>
    <string name="label_welcome_facebook_tips2">TO CONTINUE</string>
    <string name="guide_payment_choose_tips">How could you like to paid ?</string>
    <string name="label_img_description">general image description</string>
    <string name="label_payment_card">CARD</string>
    <string name="label_payment_cash">CASH</string>
    <string name="label_speak_english">Speaks English</string>
    <string name="label_filter">FILTER</string>
    <string name="label_search_by_name">Search by name...</string>
    <string name="label_search_by_city">Search by city...</string>
    <string name="label_messaged">MESSAGED</string>
    <string name="label_user_type">USER TYPE</string>
    <string name="label_gender">GENDER</string>
    <string name="label_age">AGE</string>
    <string name="label_min">MIN</string>
    <string name="label_max">MAX</string>
    <string name="label_guide">Guide</string>
    <string name="label_traveller">Traveller</string>
    <string name="label_not_available">N/A</string>
    <string name="traveller_trip_add_item_cancel_btn">Cancel</string>
    <string name="traveller_trip_add_item_done_btn">Done</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="short_for_day">dd</string>
    <string name="short_for_month">mm</string>
    <string name="short_for_year">yyyy</string>
    <string name="day_month_splitor">/</string>
    <string name="startdate_enddate_splitor">-</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="settings_notification">setting Notification</string>
    <string name="title_activity_payment_settings">PaymentSettingsActivity</string>
    <string name="title_activity_more_info">MoreInfoActivity</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>

    <!-- Used by booking and trips -->
    <string name="traveller_add_trip_start_date_prompt">Select start date</string>
    <string name="traveller_add_trip_start_month_prompt">Select start month</string>
    <string name="traveller_add_trip_end_date_prompt">Select end date</string>
    <string name="traveller_add_trip_end_month_prompt">Select end month</string>

    <!-- Used by Setting -->
    <string name="setting_match_alert">Match Alert</string>
    <string name="setting_message_alert">Message Alert</string>
    <string name="setting_half_hour_reminder">Half Hour Tour Reminder</string>
    <string name="setting_switch_account">Switch Accounts</string>
    <string name="setting_logout">Logout</string>
    <string name="setting_disable_account">Disable Account</string>
    <string name="setting_about_ventoura">About Ventoura</string>
    <string name="setting_contact_us">Feedback</string>
    <string name="setting_payment_detail">Payment Settings</string>
    <string name="setting_like_us_on_facebook">Like us on Facebook</string>
    <string name="setting_follow_us_on_twitter">Follow us on Twitter</string>

    <!-- Used By Message filter -->
    <string name="mfilter_role_traveller">Traveler</string>
    <string name="mfilter_role_local">Local</string>
    <string name="mfilter_gender_female">Female</string>
    <string name="mfilter_gender_male">Male</string>
    <string name="mfilter_book_request">Requested</string>
    <string name="mfilter_book_paid">Booked</string>
    <string name="mfilter_book_others">Others</string>

    <!-- Used By Booking filter -->
    <string name="bfilter_book_request">Request</string>
    <string name="bfilter_book_paid">Booked</string>
    <string name="bfilter_book_cancelled">Cancelled</string>
    <string name="bfilter_book_complete">Complete</string>
    <string name="bfilter_book_error">Error</string>
    <string name="bfilter_book_not_paid">Not Booked</string>
    <!-- profile initialie activity -->
    <string name="paymentMethod_title">Earn money by</string>
    <string name="chooseRole_title">Login as</string>
    <string name="traveller_pay_booking_card_number">Card Number</string>
    <string name="traveller_pay_booking_cvc">CVC</string>

    <!-- traveller promotion -->
    <string name="traveller_promotion_flight_centre_text">\"Win flights to anywhere in europe.\"</string>
    <string name="promotion_terms_and_conditions"><u>Terms &amp; Conditions</u></string>
    <string name="promotion_next_preview">Continue</string>

    <!-- Conversation Page -->
    <string name="new_match">New</string>
    <string name="traveller_match">Traveller</string>
    <string name="earlier_match">Earlier</string>
    <string name="no_city">Alien</string>

    <!-- Booking Labels -->
    <string name="request_tour">Request Request</string>
    <string name="cancel_tour">Cancel Request</string>
    <string name="pay_tour">Pay Now</string>
    <string name="review_tour">Review Tour</string>
    <string name="delete_tour">Delete Tour</string>
    <string name="guide_booking_item_selected_button_func_left">Reject</string>
    <string name="guide_booking_item_selected_button_func_right">Accept</string>

    <!-- Used by payment system -->
    <string name="payment_system_credit_card">Credit Card</string>

</resources>